# duckdb_vss

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: ClientTests.yml  MainDistributionPipeline.yml  StableDistributionPipeline.yml
embedded-c++/: CMakeLists.txt  Makefile  fashion_mnist_vss.txt  main.cpp
src/: vss_extension.cpp
src/hnsw/: CMakeLists.txt  hnsw_index.cpp  hnsw_index_logical_create.cpp  hnsw_index_macros.cpp  hnsw_index_physical_create.cpp  hnsw_index_plan.cpp  hnsw_index_pragmas.cpp  hnsw_index_scan.cpp  hnsw_optimize_expr.cpp  hnsw_optimize_join.cpp  hnsw_optimize_scan.cpp  hnsw_optimize_topk.cpp  hnsw_physical_index_join.cpp  hnsw_plan_index_create.cpp  hnsw_plan_index_scan.cpp  hnsw_topk_operator.cpp
src/include/: aggregate_function_matcher.hpp  vss_extension.hpp
src/include/fp16/: LICENSE  bitcasts.h  fp16.h
src/include/hnsw/: hnsw.hpp  hnsw_index.hpp  hnsw_index_logical_create.hpp  hnsw_index_physical_create.hpp  hnsw_index_scan.hpp  hnsw_physical_index_join.hpp
src/include/simsimd/: types.h
src/include/usearch/: duckdb_usearch.hpp  index.hpp  index_dense.hpp  index_plugins.hpp
test/nodejs/: vss_test.js
test/python/: vss_test.py
test/sql/: hnsw.test  hnsw_basic.test  hnsw_crud.test  hnsw_result.test
test/sql/base/: version.test
test/sql/hnsw/: hnsw_basic.test  hnsw_crud.test  hnsw_experimental_persistence.test  hnsw_insert.test  hnsw_insert_wal.test  hnsw_join_macro.test  hnsw_lateral_join.test  hnsw_lateral_join_group.test  hnsw_lateral_join_group_large.test  hnsw_metrics.test  hnsw_options.test  (+4 more)
(+1 files in other folders)
